--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         label {
             display: block;
             margin-bottom: 5px;
-            color: white; /* Change text color to white */
+            color: black; /* Change text color to white */
             font-weight: bold; /* Add bold style */
         }
 
