--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
                             'Place Name', station.placeName,
                             'Postal Code', station.postalCode,
                             'State', station.state,
-                            'Updated At', station.updatedAt,
                             'AQI', station.AQI,
                             'PM2.5', station['PM25'],
                             'CO', station.CO,
@@ -282,9 +281,9 @@
                 solutions = `
                     <h3>Solutions for Abnormal AQI:</h3>
                     <ul>
-                        <li>Avoid outdoor activities.</li>
-                        <li>Use masks to reduce exposure to pollutants.</li>
-                        <li>Keep windows and doors closed to prevent indoor pollution.</li>
+                        <li>Reduce Emissions from Vehicles</li>
+                        <li>Forest and Green Space Conservation</li>
+                        <li>Limit Outdoor Activities.</li>
                         <li>Use air purifiers indoors.</li>
                         <li>Follow local advisories and alerts.</li>
                     </ul>
