--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         label {
             display: block;
             margin-bottom: 5px;
-            color: black; /* Change text color to white */
+            color: white; /* Change text color to white */
             font-weight: bold; /* Add bold style */
         }
 
@@ -161,8 +161,8 @@
                             'City', station.city,
                             'Country Code', station.countryCode,
                             'Division', station.division,
-                            'Latitude', convertDecimalToDMS(station.lat), // Convert latitude to DMS
-                            'Longitude', convertDecimalToDMS(station.lng), // Convert longitude to DMS
+                            'Latitude', convertDecimalToDMS(station.lat),
+                            'Longitude', convertDecimalToDMS(station.lng),
                             'Place Name', station.placeName,
                             'Postal Code', station.postalCode,
                             'State', station.state,
@@ -174,7 +174,8 @@
                             'NO2', station.NO2,
                             'PM10', station.PM10,
                             'SO2', station.SO2,
-                            'AQI Category', getStatusHTML(station.AQI) // Display AQI category and status
+                            'AQI Category', station.aqiInfo.category || '-',
+                            'AQI Status', getStatusHTML(station.AQI)
                         ];
 
                         rowData.forEach((cellData, index) => {
@@ -263,14 +264,14 @@
             chartContainer.style.display = 'block';
         }
 
-        function getStatusHTML(AQI) {
+        function getStatusHTML(aqi) {
             let status = '';
             let color = '';
 
-            if (AQI >= 0 && AQI <= 50) {
+            if (aqi <= 50) {
                 status = 'Good';
                 color = 'green';
-            } else if (AQI > 50 && AQI <= 100) {
+            } else if (aqi <= 100) {
                 status = 'Satisfactory';
                 color = 'brown';
             } else {
@@ -295,53 +296,44 @@
             return `<span style="color: ${color}; font-weight: bold;">${status}</span><br>${solutions}`;
         }
 
-        // Function to detect location and populate postal code and country code inputs
+        // Function to convert decimal degrees to Degrees, Minutes, Seconds (DMS)
+        function convertDecimalToDMS(decimalDegrees) {
+            const degrees = Math.floor(decimalDegrees);
+            const minutesDecimal = (decimalDegrees - degrees) * 60;
+            const minutes = Math.floor(minutesDecimal);
+            const seconds = ((minutesDecimal - minutes) * 60).toFixed(2);
+            return `${degrees}° ${minutes}' ${seconds}"`;
+        }
+
+        // Function to detect user's location and populate the postal code and country code fields
         function detectLocation() {
             if ("geolocation" in navigator) {
                 navigator.geolocation.getCurrentPosition(function(position) {
-                    const latitude = position.coords.latitude.toFixed(6);
-                    const longitude = position.coords.longitude.toFixed(6);
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
 
                     fetch(`https://api.bigdatacloud.net/data/reverse-geocode-client?latitude=${latitude}&longitude=${longitude}&localityLanguage=en`)
-                        .then(response => {
-                            if (!response.ok) {
-                                throw new Error('Network response was not ok');
-                            }
-                            return response.json();
-                        })
+                        .then(response => response.json())
                         .then(data => {
-                            const country = data.countryIsoAlpha3;
-                            const postalCode = data.postcode;
+                            const countryCode = data.countryCode || '';
+                            const postalCode = data.postcode || '';
 
-                            // Populate the inputs
+                            document.getElementById('country-code').value = countryCode;
                             document.getElementById('postal-code').value = postalCode;
-                            document.getElementById('country-code').value = country;
                         })
                         .catch(error => {
                             console.error('Error:', error);
                         });
                 });
             } else {
-                alert("Geolocation is not available in your browser. Please enter the data manually.");
+                alert('Geolocation is not available in your browser.');
             }
         }
 
-        // Function to clear data when inputs are manually edited
+        // Function to clear data when the user manually enters values
         function clearData() {
-            const tableContainer = document.getElementById('table-container');
-            const chartContainer = document.getElementById('chart-container');
-            tableContainer.style.display = 'none'; // Hide table
-            chartContainer.style.display = 'none'; // Hide chart
-            tableContainer.innerHTML = ''; // Clear previous data
-            chartContainer.innerHTML = ''; // Clear previous chart
-        }
-
-        // Function to convert decimal coordinates to Degrees Minutes Seconds (DMS)
-        function convertDecimalToDMS(decimal) {
-            const degrees = Math.floor(decimal);
-            const minutes = Math.floor((decimal - degrees) * 60);
-            const seconds = ((decimal - degrees - minutes / 60) * 3600).toFixed(2);
-            return `${degrees}° ${minutes}' ${seconds}"`;
+            document.getElementById('table-container').style.display = 'none';
+            document.getElementById('chart-container').style.display = 'none';
         }
     </script>
 </body>
